plots of s vs ds and db

--- a/model_juveniles.ipynb
+++ b/model_juveniles.ipynb
@@ -1066,7 +1066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "0f3faffa",
    "metadata": {},
    "outputs": [],
@@ -1081,7 +1081,7 @@
     "parameters[\"s_jx\"] = 0.4\n",
     "parameters[\"s_jy\"] = 0.4\n",
     "parameters[\"b_x\"] = 3\n",
-    "\n",
+    "parameters[\"b_y\"] = 3\n",
     "for s_u in range(0.1,0.9,N)\n",
     "    parameters[\"s_u\"] = s_u\n",
     "    parameters[\"s_jx\"] = s_u\n",
@@ -1106,32 +1106,24 @@
     "    end\n",
     "end\n",
     "csv_data = DataFrame(s = s_csv, d_b = db_csv, h_x = h_x_csv)\n",
-    "#CSV.write(\"result_s_db.csv\",csv_data);\n",
+    "CSV.write(\"result_s_db.csv\",csv_data);\n",
     "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "a82388b4",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Dict{String, Real}(\"s_u\" => 0.9, \"h_x_bar\" => 1.0, \"h_x\" => 1.0, \"p_u\" => 0.6, \"s_y\" => 0.5, \"a\" => 0.1, \"h_y_bar\" => 0.9571384185323766, \"M\" => 1, \"s_jx\" => 0.9, \"phi\" => 0.1, \"b_x\" => 3, \"h_y\" => 0.9571384185323766, \"b_y\" => 4.0, \"s_jy\" => 0.9, \"s_x\" => 0.5, \"p_j\" => 0.58)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(parameters)"
+    "CSV.write(\"result_s_db.csv\",csv_data);"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "cc18e681",
    "metadata": {},
    "outputs": [],
@@ -1146,12 +1138,13 @@
     "parameters[\"s_jx\"] = 0.4\n",
     "parameters[\"s_jy\"] = 0.4\n",
     "parameters[\"b_x\"] = 3\n",
-    "\n",
+    "parameters[\"b_y\"] = 3\n",
+    "parameters[\"p_j\"] = 0.5\n",
     "for s_u in range(0.1,0.9,N)\n",
     "    parameters[\"s_u\"] = s_u\n",
     "    parameters[\"s_jx\"] = s_u\n",
     "    parameters[\"s_jy\"] = s_u\n",
-    "    for ds = range(0,1,N)\n",
+    "    for ds = range(0,0.45,N)\n",
     "        parameters[\"s_y\"] = parameters[\"s_x\"]+ds\n",
     "        \n",
     "        parameters[\"h_x\"] = 0\n",
@@ -1174,6 +1167,24 @@
     "CSV.write(\"result_s_ds.csv\",csv_data);\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "75a56655",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dict{String, Real}(\"s_u\" => 0.9, \"h_x_bar\" => 1.0, \"h_x\" => 1.0, \"p_u\" => 0.6, \"s_y\" => 0.5, \"a\" => 0.1, \"h_y_bar\" => 0.9571387217976761, \"M\" => 1, \"s_jx\" => 0.9, \"phi\" => 0.1, \"b_x\" => 3, \"h_y\" => 0.9571387217976761, \"b_y\" => 4.0, \"s_jy\" => 0.9, \"s_x\" => 0.5, \"p_j\" => 0.58)"
+     ]
+    }
+   ],
+   "source": [
+    "print(parameters)"
    ]
   },
   {
@@ -1822,7 +1833,7 @@
    "lastKernelId": "f3852a68-a979-44ad-b891-e4aea691ffc6"
   },
   "kernelspec": {
-   "display_name": "Julia 1.7.1",
+   "display_name": "Julia 1.7.3",
    "language": "julia",
    "name": "julia-1.7"
   },
@@ -1830,7 +1841,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.7.1"
+   "version": "1.7.3"
   }
  },
  "nbformat": 4,
