--- a/model_sj_h.ipynb
+++ b/model_sj_h.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "bd659172",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 21,
    "id": "b997f405",
    "metadata": {},
    "outputs": [
@@ -28,7 +28,7 @@
        "1.415"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "id": "51f21a29",
    "metadata": {},
    "outputs": [
@@ -98,7 +98,7 @@
        "R_0 (generic function with 1 method)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,7 +160,7 @@
     "    ; s_u*p_u_tilde(x,y) (1-T_x(h_x_bar))*s_x T_y(h_y_bar)*s_x (1-h_x)*s_u*p_u_tilde(x,y)+h_x*(T_x(h_x_bar)*s_jy+(1-T_x(h_x_bar))*s_jx)*p_j_tilde(x,y) (1-h_y)*s_u*p_u_tilde(x,y)+h_y*(T_y(h_y_bar)*s_jx+(1-T_y(h_y_bar))*s_jy)*p_j_tilde(x,y)\n",
     "    ; 0 T_x(h_x_bar)*s_y (1-T_y(h_y_bar))*s_y 0 0\n",
     "        \n",
-    "    ; s_u*p_u_tilde(x,y)*(b_x(0)/2*(1+phi+(1-phi)*theta_x0(eq))+b_x(s_jx)/2*theta_x(eq)) (1-T_x(h_x_bar))*s_x*b_x(s_jx)/2*psi_x(eq)+T_x(h_x_bar)*s_y*b_x(s_jx)/2*theta_x(eq)+((1-T_x(h_x_bar))*s_x+T_x(h_x_bar)*s_y)*b_0/2*theta_x0(eq) (1-T_y(h_y_bar))*s_y*b_y(s_jy)/2*psi_y(eq)+T_y(h_y_bar)*s_x*b_y(s_jy)/2*theta_y(eq)+((1-T_y(h_y_bar))*s_y+T_y(h_y_bar)*s_x)*b_0/2*theta_x0(eq) (1-h_x)*s_u*p_u_tilde(x,y)*b_x(0)/2*(1+phi+theta_x0(eq))+(1-h_x)*s_u*p_u_tilde(x,y)*b_x(s_jx)/2*theta_x(eq)+h_x*(T_x(h_x_bar)*s_jy+(1-T_x(h_x_bar))*s_jx)*p_j_tilde(x,y)*b_x(0)/2*(1+phi+theta_x0(eq))+h_x*(T_x(h_x_bar)*s_jy+(1-T_x(h_x_bar))*s_jx)*p_j_tilde(x,y)*b_x(s_jx)/2*theta_x(eq) (1-h_y)*s_u*p_u_tilde(x,y)*b_x(0)/2*(1+phi+theta_x0(eq))+(1-h_y)*s_u*p_u_tilde(x,y)*b_x(s_jx)/2*theta_x(eq)+h_y*(T_y(h_y_bar)*s_jx+(1-T_y(h_y_bar))*s_jy)*p_j_tilde(x,y)*b_x(0)/2*(1+phi+theta_x0(eq))+h_y*(T_y(h_y_bar)*s_jx+(1-T_y(h_y_bar))*s_jy)*p_j_tilde(x,y)*b_x(s_jx)/2*theta_x(eq)\n",
+    "    ; s_u*p_u_tilde(x,y)*(b_x(0)/2*(1+phi+theta_x0(eq))+b_x(s_jx)/2*theta_x(eq)) (1-T_x(h_x_bar))*s_x*b_x(s_jx)/2*psi_x(eq)+T_x(h_x_bar)*s_y*b_x(s_jx)/2*theta_x(eq)+((1-T_x(h_x_bar))*s_x+T_x(h_x_bar)*s_y)*b_x(0)/2*theta_x0(eq) (1-T_y(h_y_bar))*s_y*b_y(s_jy)/2*psi_y(eq)+T_y(h_y_bar)*s_x*b_y(s_jy)/2*theta_y(eq)+((1-T_y(h_y_bar))*s_y+T_y(h_y_bar)*s_x)*b_x(0)/2*theta_x0(eq) (1-h_x)*s_u*p_u_tilde(x,y)*b_x(0)/2*(1+phi+theta_x0(eq))+(1-h_x)*s_u*p_u_tilde(x,y)*b_x(s_jx)/2*theta_x(eq)+h_x*(T_x(h_x_bar)*s_jy+(1-T_x(h_x_bar))*s_jx)*p_j_tilde(x,y)*b_x(0)/2*(1+phi+theta_x0(eq))+h_x*(T_x(h_x_bar)*s_jy+(1-T_x(h_x_bar))*s_jx)*p_j_tilde(x,y)*b_x(s_jx)/2*theta_x(eq) (1-h_y)*s_u*p_u_tilde(x,y)*b_x(0)/2*(1+phi+theta_x0(eq))+(1-h_y)*s_u*p_u_tilde(x,y)*b_x(s_jx)/2*theta_x(eq)+h_y*(T_y(h_y_bar)*s_jx+(1-T_y(h_y_bar))*s_jy)*p_j_tilde(x,y)*b_x(0)/2*(1+phi+theta_x0(eq))+h_y*(T_y(h_y_bar)*s_jx+(1-T_y(h_y_bar))*s_jy)*p_j_tilde(x,y)*b_x(s_jx)/2*theta_x(eq)\n",
     "    ; s_u*p_u_tilde(x,y)*b_y(s_jy)/2*theta_y(eq) (1-T_x(h_x_bar))*s_x*b_y(s_jy)/2*theta_y(eq)+T_x(h_x_bar)*s_y*b_y(s_jy)/2*psi_y(eq) T_y(h_y_bar)*s_x*b_y(s_jy)/2*theta_y(eq)+(1-T_y(h_y_bar))*s_y*b_y(s_jy)/2*psi_y(eq) (1-h_x)*s_u*p_u_tilde(x,y)*b_y(s_jy)/2*theta_y(eq)+h_x*(T_x(h_x_bar)*s_jy+(1-T_x(h_x_bar))*s_jx)*p_j_tilde(x,y)*b_y(s_jy)/2*theta_y(eq) (1-h_y)*s_u*p_u_tilde(x,y)*b_y(s_jy)/2*theta_y(eq)+h_y*(T_y(h_y_bar)*s_jx+(1-T_y(h_y_bar))*s_jy)*p_j_tilde(x,y)*b_y(s_jy)/2*theta_y(eq)\n",
     "    ];\n",
     "end;\n",
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "id": "1e0e64de",
    "metadata": {},
    "outputs": [],
@@ -233,24 +233,24 @@
     "\n",
     "        # h_x, h_x_bar\n",
     "        parameters[\"h_x\"] += d_hx\n",
-    "        W_indiv_hx_up = nu*Mutant(mu[2], mu[3],parameters)*[0,0,0,b_x(s_jx)*mu[2],0]\n",
+    "        W_indiv_hx_up = nu*Mutant(mu,parameters)*[0,0,0,b_x(s_jx)*mu[2],0]\n",
     "        parameters[\"h_x\"] -= 2*d_hx\n",
-    "        W_indiv_hx_down = nu*Mutant(mu[2], mu[3],parameters)*[0,0,0,b_x(s_jx)*mu[2],0]\n",
+    "        W_indiv_hx_down = nu*Mutant(mu,parameters)*[0,0,0,b_x(s_jx)*mu[2],0]\n",
     "\n",
     "        parameters[\"h_x\"] += d_hx\n",
     "        parameters[\"h_x_bar\"] +=d_hx_bar\n",
     "        # changing right eigenvector\n",
-    "        W_parent_hx_up = nu*Mutant(mu[2], mu[3],parameters)*[0,mu[2],0,0,0]\n",
+    "        W_parent_hx_up = nu*Mutant(mu,parameters)*[0,mu[2],0,0,0]\n",
     "        #To be discussed:\n",
     "        #parameters[\"h_x\"] += d_hx\n",
-    "        W_siblings_hx_up = nu*Mutant(mu[2], mu[3],parameters)*[0,0,0,b_x(s_jx)*mu[2],0]\n",
+    "        W_siblings_hx_up = nu*Mutant(mu,parameters)*[0,0,0,b_x(s_jx)*mu[2],0]\n",
     "        #parameters[\"h_x\"] -= d_hx\n",
     "        \n",
     "        parameters[\"h_x_bar\"] -= 2*d_hx_bar\n",
-    "        W_parent_hx_down = nu*Mutant(mu[2], mu[3],parameters)*[0,mu[2],0,0,0]\n",
+    "        W_parent_hx_down = nu*Mutant(mu,parameters)*[0,mu[2],0,0,0]\n",
     "        #To be discussed:\n",
     "        #parameters[\"h_x\"] -= *d_hx\n",
-    "        W_siblings_hx_down = nu*Mutant(mu[2], mu[3],parameters)*[0,0,0,b_x(s_jx)*mu[2],0]\n",
+    "        W_siblings_hx_down = nu*Mutant(mu,parameters)*[0,0,0,b_x(s_jx)*mu[2],0]\n",
     "        #parameters[\"h_x\"] += d_hx\n",
     "        \n",
     "        parameters[\"h_x_bar\"] +=d_hx_bar\n",
@@ -263,11 +263,11 @@
     "        \n",
     "        #s_jx change\n",
     "        parameters[\"s_jx\"] += d_sjx\n",
-    "        W_indiv_sjx_up = nu*Mutant(mu[2], mu[3],parameters)*[0,0,0,b_x(s_jx)*mu[2],0]\n",
-    "        W_parent_sjx_up = nu*Mutant(mu[2], mu[3],parameters)*[0,mu[2],0,0,0]\n",
+    "        W_indiv_sjx_up = nu*Mutant(mu,parameters)*[0,0,0,b_x(s_jx)*mu[2],0]\n",
+    "        W_parent_sjx_up = nu*Mutant(mu,parameters)*[0,mu[2],0,0,0]\n",
     "        parameters[\"s_jx\"] -= 2*d_sjx\n",
-    "        W_indiv_sjx_down = nu*Mutant(mu[2], mu[3],parameters)*[0,0,0,b_x(s_jx)*mu[2],0]\n",
-    "        W_parent_sjx_down = nu*Mutant(mu[2], mu[3],parameters)*[0,mu[2],0,0,0]\n",
+    "        W_indiv_sjx_down = nu*Mutant(mu,parameters)*[0,0,0,b_x(s_jx)*mu[2],0]\n",
+    "        W_parent_sjx_down = nu*Mutant(mu,parameters)*[0,mu[2],0,0,0]\n",
     "        W_indiv_sjx = W_indiv_sjx_up-W_indiv_sjx_down\n",
     "        W_parent_sjx = R_jp*(W_parent_sjx_up-W_parent_sjx_down)\n",
     "        dW_sjx = W_indiv_sjx[1]+W_parent_sjx[1]\n",
@@ -276,18 +276,18 @@
     "        # h_y, h_y_bar\n",
     "\n",
     "        parameters[\"h_y\"] += d_hy\n",
-    "        W_indiv_hy_up = nu*Mutant(mu[2], mu[3],parameters)*[0,0,0,0,b_y(s_jy)*mu[3]]\n",
+    "        W_indiv_hy_up = nu*Mutant(mu,parameters)*[0,0,0,0,b_y(s_jy)*mu[3]]\n",
     "        parameters[\"h_y\"] -= 2*d_hy\n",
-    "        W_indiv_hy_down = nu*Mutant(mu[2], mu[3],parameters)*[0,0,0,0,b_y(s_jy)*mu[3]]\n",
+    "        W_indiv_hy_down = nu*Mutant(mu,parameters)*[0,0,0,0,b_y(s_jy)*mu[3]]\n",
     "\n",
     "        parameters[\"h_y\"] += d_hy\n",
     "        parameters[\"h_y_bar\"] += d_hy_bar\n",
-    "        W_parent_hy_up = nu*Mutant(mu[2], mu[3],parameters)*[0,0,mu[3],0,0]\n",
-    "        W_siblings_hy_up = nu*Mutant(mu[2], mu[3],parameters)*[0,0,0,0,b_y(s_jy)*mu[3]]\n",
+    "        W_parent_hy_up = nu*Mutant(mu,parameters)*[0,0,mu[3],0,0]\n",
+    "        W_siblings_hy_up = nu*Mutant(mu,parameters)*[0,0,0,0,b_y(s_jy)*mu[3]]\n",
     "\n",
     "        parameters[\"h_y_bar\"] -= 2*d_hy_bar\n",
-    "        W_parent_hy_down = nu*Mutant(mu[2], mu[3],parameters)*[0,0,mu[3],0,0]\n",
-    "        W_siblings_hy_down = nu*Mutant(mu[2], mu[3],parameters)*[0,0,0,0,b_y(s_jy)*mu[3]]\n",
+    "        W_parent_hy_down = nu*Mutant(mu,parameters)*[0,0,mu[3],0,0]\n",
+    "        W_siblings_hy_down = nu*Mutant(mu,parameters)*[0,0,0,0,b_y(s_jy)*mu[3]]\n",
     "        parameters[\"h_y_bar\"] += d_hy_bar\n",
     "\n",
     "\n",
@@ -299,11 +299,11 @@
     "        \n",
     "        #s_jy change\n",
     "        parameters[\"s_jy\"] += d_sjy\n",
-    "        W_indiv_sjy_up = nu*Mutant(mu[2], mu[3],parameters)*[0,0,0,0,b_y(s_jy)*mu[3]]\n",
-    "        W_parent_sjy_up = nu*Mutant(mu[2], mu[3],parameters)*[0,0,mu[3],0,0]\n",
+    "        W_indiv_sjy_up = nu*Mutant(mu,parameters)*[0,0,0,0,b_y(s_jy)*mu[3]]\n",
+    "        W_parent_sjy_up = nu*Mutant(mu,parameters)*[0,0,mu[3],0,0]\n",
     "        parameters[\"s_jy\"] -= 2*d_sjy\n",
-    "        W_indiv_sjy_down = nu*Mutant(mu[2], mu[3],parameters)*[0,0,0,0,b_y(s_jy)*mu[3]]\n",
-    "        W_parent_sjy_down = nu*Mutant(mu[2], mu[3],parameters)*[0,0,mu[3],0,0]\n",
+    "        W_indiv_sjy_down = nu*Mutant(mu,parameters)*[0,0,0,0,b_y(s_jy)*mu[3]]\n",
+    "        W_parent_sjy_down = nu*Mutant(mu,parameters)*[0,0,mu[3],0,0]\n",
     "        W_indiv_sjy = W_indiv_sjy_up-W_indiv_sjy_down\n",
     "        W_parent_sjy = R_jp*(W_parent_sjy_up-W_parent_sjy_down)\n",
     "        dW_sjy = W_indiv_sjy[1]+W_parent_sjy[1]\n",
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "id": "68eda183",
    "metadata": {},
    "outputs": [
@@ -327,7 +327,7 @@
        "ESS (generic function with 1 method)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 25,
    "id": "96e6431e",
    "metadata": {},
    "outputs": [
@@ -410,27 +410,34 @@
       "text/plain": [
        "Dict{String, Real} with 14 entries:\n",
        "  \"s_u\"     => 0.4\n",
-       "  \"h_x_bar\" => 0.149291\n",
-       "  \"h_x\"     => 0.149291\n",
+       "  \"h_x_bar\" => 1.0\n",
+       "  \"h_x\"     => 1.0\n",
        "  \"s_y\"     => 0.6\n",
        "  \"a\"       => 0.1\n",
        "  \"p_u\"     => 0.6\n",
-       "  \"h_y_bar\" => 0.0867813\n",
+       "  \"h_y_bar\" => 1.0\n",
        "  \"M\"       => 1\n",
        "  \"s_jx\"    => 1.0\n",
        "  \"phi\"     => 0.1\n",
-       "  \"h_y\"     => 0.0867813\n",
-       "  \"s_jy\"    => 0.0\n",
+       "  \"h_y\"     => 1.0\n",
+       "  \"s_jy\"    => 1.0\n",
        "  \"s_x\"     => 0.5\n",
        "  \"p_j\"     => 0.58"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "parameters[\"h_x\"] = 0\n",
+    "parameters[\"h_y\"] = 0\n",
+    "parameters[\"h_x_bar\"] = 0\n",
+    "parameters[\"h_y_bar\"] = 0\n",
+    "parameters[\"s_jx\"] = 0.5\n",
+    "parameters[\"s_jy\"] = 0.5\n",
+    "\n",
     "ESS(parameters)"
    ]
   },
@@ -445,7 +452,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.7.3",
+   "display_name": "Julia 1.7.1",
    "language": "julia",
    "name": "julia-1.7"
   },
@@ -453,7 +460,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.7.3"
+   "version": "1.7.1"
   }
  },
  "nbformat": 4,
